[package]
name = "zjuis"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
num-bigint = "0.4.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
